How-to updates.

--- a/Bibliography/thesis.bib
+++ b/Bibliography/thesis.bib
@@ -1,6 +1,15 @@
 
 % Use double curly brackets to get the title exactly as spelled ({{...The Title}})
 
+
+@article{polyglossia,
+	title = {Polyglossia: Modern multilingual typesetting with {LATEX} and {LuaLATEX}},
+	author = {Charette, François and Reutenauer, Arthur and  Roux, Elie and Spitzmüller, Jürgen and  Roucariès, Bastien},
+	publisher = {CTAN: The Comprehensive TeX Archive Network},
+	langid = {english},
+	year = {2020}
+}
+
 @book{lamport94ldp,
   address = {Reading, Mass.},
   author = {Lamport, Leslie},
