Fixed addbibresource bug, does not accept list of bib files.

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@ cover,              %% Custom cover page, must be provided as an Layout/coverpag
 %% Bibliography and citation style
 
 \citationstyle{ieee} %% REQUIRED. Citation style, see https://www.overleaf.com/learn/latex/biblatex_citation_styles for all available styles, some examples: ieee, apa, nature.
-\addbibresource{Bibliography/thesis.bib} %% REQUIRED. You may substitute "thesis" with another, or several comma separated, *.bib files
+\addbibresource{Bibliography/thesis.bib} %% REQUIRED. You may substitute "thesis" with another. To include more *.bib files, repeat the \addbibresource command
 
 \input{Chapters/glossary}    %% OPTIONAL, goes with \printglossaries in the end matter file
 
