Minor glossary and indexing cleanup.

--- a/Bibliography/thesis.bib
+++ b/Bibliography/thesis.bib
@@ -64,7 +64,8 @@ school = {{\O}stfold University College, School of Computer Sciences, Halden, No
 year = {2014}
 }
 
-@mastersthesis{akeriversen20bah,
+@thesis{akeriversen20bah,
+type = {Bachelor's Thesis},
 author = {Aker-Iversen, Stian and Christensen, Thomas and
 Dragnes, Andrea Regine Heggem and Thunold, Håvard Horgen and
 Sømme, Oskar Andre},
