--- a/Parts/endmatter.tex
+++ b/Parts/endmatter.tex
@@ -1,5 +1,7 @@
 \printglossaries            %% OPTIONAL, goes with the command \input{glossary} (before mainmatter.tex)
 
+\printindex                 %% OPTIONAL
+
 \appendix                   %% OPTIONAL. Use if you want to include appendices. The following chapters wil be formatted separately as appendices
 \input{Chapters/how-to}     %% READ THIS CHAPTER: A detailed user manualm, with sample code of everything you need and more :-)
 
