Included a new appendix to demonstrate how to include pages from a PDF documents.

--- a/Bibliography/thesis.bib
+++ b/Bibliography/thesis.bib
@@ -1,6 +1,14 @@
 
 % Use double curly brackets to get the title exactly as spelled ({{...The Title}})
 
+@inproceedings{holone2007users,
+  title={Users are doing it for themselves: Pedestrian navigation with user generated content},
+  author={Holone, Harald and Misund, Gunnar and Holmstedt, Hakon},
+  booktitle={The 2007 International Conference on Next Generation Mobile Applications, Services and Technologies (NGMAST 2007)},
+  pages={91--99},
+  year={2007},
+  organization={IEEE}
+}
 
 @article{polyglossia,
 	title = {Polyglossia: Modern multilingual typesetting with {LATEX} and {LuaLATEX}},
