--- a/Parts/endmatter.tex
+++ b/Parts/endmatter.tex
@@ -5,4 +5,6 @@
 \appendix                   %% OPTIONAL. Use if you want to include appendices. The following chapters wil be formatted separately as appendices
 \input{Chapters/how-to}     %% READ THIS CHAPTER: A detailed user manualm, with sample code of everything you need and more :-)
 
+\input{Chapters/pdfs}       %% Shows how to include pages from PDFs
+
 \end{document}              %% DO NOT CHANGE OR REMOVE
