As submitted to Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% IMPORTANT INFORMATIOn
+%% IMPORTANT INFORMATION
 %% Lines followed by "%% DO NOT CHANGE OR REMOVE" are 
 %% system critical, tampering will lead to one or more error messages
 %%
