Added package grffile to enable multiple dots in graphics file names.

--- a/thesistemplate.cls
+++ b/thesistemplate.cls
@@ -87,6 +87,7 @@
 \RequirePackage[export]{adjustbox}
 \RequirePackage[nottoc]{tocbibind}
 \RequirePackage[colorinlistoftodos,obeyDraft]{todonotes}
+\RequirePackage[multidot]{grffile}
 
 
 % Custom headers and footers
