Improve abstract, added endnotes stuff.

--- a/Bibliography/thesis.bib
+++ b/Bibliography/thesis.bib
@@ -90,3 +90,15 @@ year = {2020}
  publisher = {McGraw-Hill, Inc.},
  address = {New York, NY, USA}
 }
+
+@article{landes1966scrutiny,
+  title={A scrutiny of the abstract, II},
+  author={Landes, Kenneth K},
+  journal={AAPG Bulletin},
+  volume={50},
+  number={9},
+  pages={1992--1992},
+  year={1966},
+  publisher={American Association of Petroleum Geologists (AAPG)}
+}
+
