--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@ cover,              %% Custom cover page, must be provided as an Layout/coverpag
 
 %% Bibliography and citation style
 
-\citationstyle{ieee} %% REQUIRED. Citation style, see https://www.overleaf.com/learn/latex/biblatex_citation_styles for all available styles, some examples: ieee, apa, nature.
+\citationstyle{apa} %% REQUIRED. Citation style, see https://www.overleaf.com/learn/latex/biblatex_citation_styles for all available styles, some examples: ieee, apa, nature.
 \addbibresource{Bibliography/thesis.bib} %% REQUIRED. You may substitute "thesis" with another. To include more *.bib files, repeat the \addbibresource command
 
 \input{Chapters/glossary}       %% OPTIONAL, goes with \printglossaries in the end matter file
@@ -55,6 +55,8 @@ cover,              %% Custom cover page, must be provided as an Layout/coverpag
 \makeindex[columns=2, intoc]
 
 %\makeindex%[columns=2, intoc]    %% OPTIONAL, goes with \printindex in endmatter.tex
+
+\sloppy %% Prevents long words to flow into the margin, bu applying a "sloppy" hyphenation method. Remove if do not want this.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% END PREAMBLE
